# homework

./: README.md  main.py  pyproject.toml  test.txt
src/: main.py
tests/: test_main.py
